<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
        android:id="@+id/nav_emulation"
        android:icon="@drawable/ic_credit_card_24"
        android:title="@string/bottom_nav_emulation" />
    
    <item
        android:id="@+id/nav_hardware"
        android:icon="@drawable/ic_nfc_24"
        android:title="@string/bottom_nav_hardware" />
    
    <item
        android:id="@+id/nav_logs"
        android:icon="@drawable/ic_list_24"
        android:title="@string/bottom_nav_logs" />
    
    <item
        android:id="@+id/nav_fuzzer"
        android:icon="@drawable/ic_bug_report_24"
        android:title="@string/bottom_nav_fuzzer" />
    
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/bottom_nav_settings" />
    
</menu>